tests/snapshots/examples_fixtures/type_system__failing__118_let_missing_eq.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/118_let_missing_eq.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected `=` after `let x`. Did you mean `let x = ...`?

  examples/type_system/failing/118_let_missing_eq.flx:21:11
   |
21 |     let x 1
   |           ^

Hint:
  Let bindings require `=`: `let name = value`
== stdout ==
<not executed>
